# tft-calcs

./: .gitignore  LICENSE  README.md  setup.cfg
data/set_10/: components.json  units.json
src/clusters/: __main__.py  calculator.py  components.py
src/tft-clusters/: components.py
