[metadata]
name = tft-calcs
version = 0.0.0-alpha
license = MIT
description = TFT tool box
long_description = file: README.md
author = mosc5
author_email = <Optional: author e-mail>
classifiers=
   Development Status :: 3 - Alpha
   Programming Language :: Python
   Programming Language :: Python :: 3

[options]
packages = tft-clusters
package_dir =
    =src
include_package_data = True
python_requires = >=3.8

[flake8]
max-line-length = 120
extend-ignore = E203, W503
exclude = /docs
max-complexity = 15